Create Module for SQLite example

--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -53,7 +53,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="4"
-                android:hint="이"
+                android:hint="이름"
                 android:inputType="text"/>
         </LinearLayout>
         <LinearLayout
@@ -101,7 +101,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="4"
-                android:hint="이메"
+                android:hint="이메일"
                 android:inputType="textEmailAddress"/>
         </LinearLayout>
 
